--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@ p {text-align: center;}
 
 <section>
 
-<a href="https://www.instagram.com/nuriniwani__/"><img src="C:\Users\SAFUAN\OneDrive\Desktop\iwani's\ig.png" width='100' height='100'></a>
-<a href="https://twitter.com/iwaanii"><img src="C:\Users\SAFUAN\OneDrive\Desktop\iwani's\twt.png" width='100' height='100'></a>
-<a href="https://www.facebook.com/nurin.auni.56/"><img src="C:\Users\SAFUAN\OneDrive\Desktop\iwani's\fb.png" width='100' height='100'></a>
+<a href="https://www.instagram.com/nuriniwani__/"><img src="ig.png" width='100' height='100'></a>
+<a href="https://twitter.com/iwaanii"><img src="twt.png" width='100' height='100'></a>
+<a href="https://www.facebook.com/nurin.auni.56/"><img src="fb.png" width='100' height='100'></a>
 
   <article>
     <h1><br>Introduction</h1>
