--- a/Resume.html
+++ b/Resume.html
@@ -189,7 +189,7 @@ body {
   <div class="rightcolumn">
     <div class="card">
       <h2>About Me</h2>
-      <img height=250 width=200 src= "C:\Users\SAFUAN\OneDrive\Desktop\iwani's\resume2.jpg" ></img>
+      <img height=250 width=200 src= "resume2.jpg" ></img>
       <p><b>NURIN IWANI BINTI AHMAD SAFUWAN </b></p>
  	<p><b>021014-04-0154 </b></p>
 	<p><b>NO 10, JALAN GUNUNG NUANG U11/7, BUKIT BANDARAYA SEKSYEN U11. 40170 SHAH ALAM, SELANGOR. </b></p>
@@ -229,9 +229,9 @@ table, th, td {
 </div>
 
 <div class="footer">
-  <a href="https://www.instagram.com/nuriniwani__/"><img src="C:\Users\SAFUAN\OneDrive\Desktop\iwani's\ig.png" width='100' height='100'></a>
-<a href="https://twitter.com/iwaanii"><img src="C:\Users\SAFUAN\OneDrive\Desktop\iwani's\twt.png" width='100' height='100'></a>
-<a href="https://www.facebook.com/nurin.auni.56/"><img src="C:\Users\SAFUAN\OneDrive\Desktop\iwani's\fb.png" width='100' height='100'></a>
+  <a href="https://www.instagram.com/nuriniwani__/"><img src="ig.png" width='100' height='100'></a>
+<a href="https://twitter.com/iwaanii"><img src="twt.png" width='100' height='100'></a>
+<a href="https://www.facebook.com/nurin.auni.56/"><img src="fb.png" width='100' height='100'></a>
 </div>
 
 </body>
