--- a/contact information.html
+++ b/contact information.html
@@ -232,7 +232,7 @@ Twitter<input type= "checkbox" >
 </div>
 
 <div class="txtb">
-<span class=details">PLEASE SELECT YOUR STATE</span>
+<span class="details">PLEASE SELECT YOUR STATE</span>
 <select name="Duration">
 <option value="SELECT">SELECT
 <option value="Terengganu">Terengganu
@@ -267,9 +267,9 @@ Twitter<input type= "checkbox" >
 </div>
 
 <center>
-<a href="https://www.instagram.com/nuriniwani__/"><img src="C:\Users\SAFUAN\OneDrive\Desktop\iwani's\ig.png" width='100' height='100'></a>
-<a href="https://twitter.com/iwaanii"><img src="C:\Users\SAFUAN\OneDrive\Desktop\iwani's\twt.png" width='100' height='100'></a>
-<a href="https://www.facebook.com/nurin.auni.56/"><img src="C:\Users\SAFUAN\OneDrive\Desktop\iwani's\fb.png" width='100' height='100'></a>
+<a href="https://www.instagram.com/nuriniwani__/"><img src="ig.png" width='100' height='100'></a>
+<a href="https://twitter.com/iwaanii"><img src="twt.png" width='100' height='100'></a>
+<a href="https://www.facebook.com/nurin.auni.56/"><img src="fb.png" width='100' height='100'></a>
 </center>
 </body>
 </body>
